<resources>
    <string name="app_name">AudioS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nav_recorder">Recorder</string>
    <string name="nav_public_map">Public Map</string>
    <string name="nav_upload">Upload</string>
    <string name="nav_viewer">View</string>
    <string name="record_time_template" translatable="false">%1$2d:%2$2d:%3$2d</string>
    <string name="recorder_recording">RECORDING</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewer_resources">All Records</string>
    <string name="viewer_local_resources">Local Records</string>
    <string name="viewer_local_audio">Local Audio Files</string>

    <!-- Strings related to LocalAudioFragment -->
    <string name="delete_description">Delete the audio file</string>
    <string name="upload_description">Upload the audio file</string>
    <string name="offline_mode">Offline mode. Please check your internet connection</string>
    <string name="login">Login</string>
    <string name="login_or_sign_up">Login / Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="processing">Processing...</string>
    <string name="login_failed">Login Failed. Please Try Again</string>
    <string name="confirm_password">Password Confirm</string>
    <string name="password_not_match">Password Not Matched</string>
    <string name="username">Username</string>
    <string name="register_failed">Register Failed. Please Try Again</string>
    <string name="nav_menu_user">User</string>
    <string name="menu_nav_my_profile">My Profile</string>
    <string name="menu_nav_logout">Logout</string>
    <string name="error_logout">Error Logout User. Please Try Again Later</string>
</resources>
