<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/menu_nav_recorder"
            android:icon="@drawable/ic_mic_black_48dp"
            android:title="@string/nav_recorder" />
        <item
            android:id="@+id/menu_nav_map"
            android:icon="@drawable/ic_map_black_48dp"
            android:title="@string/nav_public_map" />
        <item
            android:id="@+id/menu_nav_upload"
            android:icon="@drawable/ic_file_upload_black_48dp"
            android:title="@string/nav_upload" />
        <item
            android:id="@+id/menu_nav_view"
            android:icon="@drawable/ic_list_black_48dp"
            android:title="@string/nav_viewer" />
    </group>

    <item android:title="@string/nav_menu_user">
        <menu>
            <item
                android:id="@+id/menu_nav_profile"
                android:icon="@drawable/ic_account_circle_black_48dp"
                android:title="@string/menu_nav_my_profile" />
            <item
                android:id="@+id/menu_nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_48dp"
                android:title="@string/menu_nav_logout" />
        </menu>
    </item>

</menu>
