<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.audioservice.audios.RecorderActivity">

    <ImageView
        android:id="@+id/but_icon_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:adjustViewBounds="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:src="@drawable/ic_record_inactive"/>

    <TextView
        android:id="@+id/text_record_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/record_time_template"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/text_record_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/recorder_recording"
        android:textColor="@android:color/holo_red_dark"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible"/>

</LinearLayout>
